--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,12 @@
            <artifactId>handlebars</artifactId>
            <version>${handlebars.version}</version>
        </dependency>
-    </dependencies>
+       <dependency>
+           <groupId>org.reflections</groupId>
+           <artifactId>reflections</artifactId>
+           <version>0.9.10</version>
+       </dependency>
+   </dependencies>
 
     <build>
         <plugins>
